fix(front-end): Background and foreground colors do not have a sufficient contrast ratio

--- a/style.css
+++ b/style.css
@@ -100,11 +100,11 @@ a:hover {
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color: #000000;
 }
 
 .d-bloc button:hover {
-    color: rgba(255, 255, 255, .9);
+    color: #000000;
 }
 
 .d-bloc .icon-round,
@@ -651,7 +651,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: black!important;
 }
 
 .container {
@@ -1040,3 +1040,4 @@ h4 {
         text-align: center;
     }
 }
+
